--- a/style.css
+++ b/style.css
@@ -170,6 +170,18 @@ th {
     /*text-shadow: 2px 2px 2px rgb(179, 177, 177);*/
 }
 
+.titulosimples {
+    text-align: center;
+    font-size: 1.5em;
+    margin: 0 0 15px 0;
+    color: #0f7f83;
+    /*text-shadow: 2px 2px 2px rgb(179, 177, 177);*/
+}
+
+.redessociais {
+    margin: 2em auto 0;
+}
+
 .titulocentro:before {
     content: "♡ ";
 }
@@ -199,6 +211,11 @@ th {
 .utensilios {
     width: 120px;
     float: left;
+    margin: 0 20px 20px 0;
+}
+
+.icones {
+    width: 50px;
     margin: 0 20px 20px 0;
 }
 
@@ -233,15 +250,19 @@ th {
 }
 
 .bloco-imagem {
-    width: 100%;
     text-align: center;
-    padding: 1em 0;
+    padding: 1em 1em;
     margin-left: auto;
     background: linear-gradient(#ffffff, #c8fff9);
 }
 
 .bloco-imagem2 {
     width: 100%;
+}
+
+.bloco-links {
+    text-align: center;
+    padding: 1em 1em;
 }
 
 .lista-beneficios {
@@ -256,16 +277,18 @@ th {
     line-height: 1.5;
 }
 
-.itens:first-child {
+
+/*.itens:first-child {
     font-weight: bold;
-}
+}*/
 
 .itens::before {
     content: "♥ ";
 }
 
 .imagembeneficios {
-    width: 15%;
+    padding-top: 8px;
+    width: 19%;
     opacity: 0.8;
     transition: 400ms;
     /*box-shadow: 0px 0px 20px 10px #888888;*/
@@ -275,10 +298,11 @@ th {
     opacity: 1;
 }
 
-.imagembeneficios:active {
+
+/*.imagembeneficios:active {
     width: 35%;
     opacity: 1;
-}
+}*/
 
 .video {
     width: 560px;
