--- a/estilos/style-contato.css
+++ b/estilos/style-contato.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-    background: url("../imagens/bg.jpg");
+    background: url("../imagens/banner.jpg");
     height: 250px;
     padding: 20px 0;
 }
@@ -44,132 +44,74 @@ main {
 }
 
 .principal {
-    padding: 2em 1em 0;
-    margin: 2em auto 0;
+    padding: 1em 1em 0;
+    margin: 1em auto 1em;
     width: 940px;
 }
 
-.principal p {
-    margin: 0 0 1em;
+form {
+    margin: 40px 0;
 }
 
-.principal strong {
+form label,
+form legend {
+    display: block;
+    font-size: 18px;
+    margin: 0 0 10px;
+}
+
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: darkorange;
+    transform: scale(1.2);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #312f2f;
+    color: #ffffff;
     font-weight: bold;
 }
 
-.principal em {
-    font-style: italic;
+td,
+th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
 }
 
-.titulocentro {
-    text-align: center;
-    font-size: 2em;
-    margin: 0 0 15px 0;
-    clear: left;
-    color: #0f7f83;
-    /*text-shadow: 2px 2px 2px rgb(179, 177, 177);*/
-}
-
-.titulocentro:before {
-    content: "♡ ";
-}
-
-.titulocentro::after {
-    content: " ♡";
-}
-
-.utensilios {
-    width: 120px;
-    float: left;
-    margin: 0 20px 20px 0;
-}
-
-.redessociais {
-    margin: 2em auto 0;
-}
-
-.titulosimples {
-    text-align: center;
-    font-size: 1.5em;
-    margin: 0 0 15px 0;
-    color: #0f7f83;
-    /*text-shadow: 2px 2px 2px rgb(179, 177, 177);*/
-}
-
-.bloco-links {
-    text-align: center;
-    padding: 1em 1em;
-}
-
-.icones {
-    width: 50px;
-    margin: 0 20px 20px 0;
-}
-
-.beneficios {
+.banner {
     width: 100%;
-    padding: 1em 0;
-    background: #ffffff;
-}
-
-.conteudo-beneficios {
-    width: 640px;
-    margin: 0 auto;
-}
-
-.lista-beneficios {
-    text-align: center;
-    width: 100%;
-    display: inline-block;
-    vertical-align: top;
-    padding: 1em 0;
-}
-
-.itens {
-    line-height: 1.5;
-}
-
-.bloco-imagem2 {
-    width: 100%;
-}
-
-.bloco-imagem {
-    text-align: center;
-    padding: 1em 1em;
-    margin-left: auto;
-    background: linear-gradient(#ffffff, #c8fff9);
-}
-
-.imagembeneficios {
-    padding-top: 8px;
-    width: 19%;
-    opacity: 0.8;
-    transition: 400ms;
-    /*box-shadow: 0px 0px 20px 10px #888888;*/
-}
-
-.imagembeneficios:hover {
-    opacity: 1;
-}
-
-.mapa {
-    padding: 1em 1em 3em;
-    background: linear-gradient(#c8fff9, #69d7cc);
-}
-
-.mapa p {
-    margin: 1em 1em 2em;
-    text-align: center;
-}
-
-.mapa-conteudo {
-    width: 940px;
-    margin: 0 auto;
 }
 
 footer {
     text-align: center;
-    background: url("../imagens/bg.jpg");
+    background: url("../imagens/banner.jpg");
     padding: 1em 0;
     height: 16em;
 }
@@ -179,4 +121,3 @@ footer {
     font-size: 13px;
     margin: 20px;
 }
-
