--- a/estilos/style-index.css
+++ b/estilos/style-index.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-    background: url("../imagens/bg.jpg");
+    background: url("../imagens/banner.jpg");
     height: 250px;
     padding: 20px 0;
 }
@@ -78,7 +78,7 @@ main {
     content: " ♡";
 }
 
-.utensilios {
+.avatar {
     width: 120px;
     float: left;
     margin: 0 20px 20px 0;
@@ -96,7 +96,7 @@ main {
     /*text-shadow: 2px 2px 2px rgb(179, 177, 177);*/
 }
 
-.bloco-links {
+.bloco-redesocial {
     text-align: center;
     padding: 1em 1em;
 }
@@ -129,27 +129,27 @@ main {
     line-height: 1.5;
 }
 
-.bloco-imagem2 {
+.estudio {
     width: 100%;
 }
 
-.bloco-imagem {
+.bloco-estudio {
     text-align: center;
     padding: 1em 1em;
     margin-left: auto;
     background: linear-gradient(#ffffff, #c8fff9);
 }
 
-.imagembeneficios {
+.foto-estudio {
     padding-top: 8px;
     width: 19%;
-    opacity: 0.8;
+    opacity: 1;
     transition: 400ms;
     /*box-shadow: 0px 0px 20px 10px #888888;*/
 }
 
-.imagembeneficios:hover {
-    opacity: 1;
+.foto-estudio:hover {
+    opacity: 0.8;
 }
 
 .mapa {
@@ -169,7 +169,7 @@ main {
 
 footer {
     text-align: center;
-    background: url("../imagens/bg.jpg");
+    background: url("../imagens/banner.jpg");
     padding: 1em 0;
     height: 16em;
 }
