--- a/estilos/style-index.css
+++ b/estilos/style-index.css
@@ -4,25 +4,19 @@ body {
 
 header {
     background: url("../imagens/banner.jpg");
+    text-align: center;
     height: 250px;
-    padding: 20px 0;
-}
-
-.caixa {
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
 }
 
 nav {
     position: absolute;
-    top: 110px;
-    right: 0;
+    right: 1.5em;
+    top: 13.5em;
 }
 
 nav li {
     display: inline;
-    margin: 0 0 0 20px;
+    margin: 0.6em;
 }
 
 nav a {
@@ -46,7 +40,7 @@ main {
 .principal {
     padding: 2em 1em 0;
     margin: 2em auto 0;
-    width: 940px;
+    width: 90%;
 }
 
 .principal p {
@@ -113,7 +107,7 @@ main {
 }
 
 .conteudo-beneficios {
-    width: 640px;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -163,20 +157,18 @@ main {
 }
 
 .mapa-conteudo {
-    width: 940px;
+    width: 90%;
     margin: 0 auto;
 }
 
 footer {
     text-align: center;
     background: url("../imagens/banner.jpg");
-    padding: 1em 0;
     height: 16em;
 }
 
 .copyright {
     color: azure;
     font-size: 13px;
-    margin: 20px;
 }
 
