--- a/estilos/style-produto.css
+++ b/estilos/style-produto.css
@@ -43,10 +43,10 @@ main {
 }
 
 .foto-tattoo {
-    padding-top: 8px;
     width: 19%;
     opacity: 1;
     transition: 400ms;
+    padding: 0.2em;
     /*box-shadow: 0px 0px 20px 10px #888888;*/
 }
 
