--- a/estilos/style-contato.css
+++ b/estilos/style-contato.css
@@ -4,8 +4,8 @@ body {
 
 header {
     background: url("../imagens/banner.jpg");
-    height: 250px;
     text-align: center;
+    padding-bottom: 1.5em;
 }
 
 nav {
@@ -106,7 +106,7 @@ th {
 footer {
     text-align: center;
     background: url("../imagens/banner.jpg");
-    height: 16em;
+    height: 15.8em;
 }
 
 .copyright {
