--- a/estilos/style-produto.css
+++ b/estilos/style-produto.css
@@ -36,6 +36,11 @@ main {
     margin: 0 auto;
 }
 
+ul {
+    text-align: center;
+    padding: 0.2em;
+}
+
 .principal {
     padding: 2em 1em 0;
     margin: 2em auto 0;
@@ -57,7 +62,7 @@ main {
 footer {
     text-align: center;
     background: url("../imagens/banner.jpg");
-    height: 15.8em;
+    height: 11.2em;
 }
 
 .copyright {
